[package]
name = "gstest-kits"
version = "0.2.2"
edition = "2021"
description = "gstest kits"
license = "MIT"
repository ="https://github.com/keithyin/gstest-kits"

[[bin]]
name = "gstest-kits"
path = "src/bin/gstest_kits.rs"


[dependencies]
gskits = "0.15"
rust-htslib = "0.49"
clap = {version="4.4.14", features=["derive"]}
